--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,6 +20,6 @@ $fa-font-path:  "../webfonts";
 }
 
 .router-link-exact-active{
-  background-color: red;
-  color: #fff;
+  background-color: #3F51B5;
+  color: #fff !important;
 }
